# ParallelPrint

./: .gitignore  AGENTS.md  README.md  app.py  gcode_viewer.py  pyproject.toml  requirements.txt  stl_slicer.py  tiff_to_gcode.py  vector_gcode.py  vector_toolpath.py
.codex/environments/: environment.toml
sample_stls/: Checkerboard_Cube_1.stl  Checkerboard_Cube_2.stl  Hollow_Pyramid.stl  Rounded_Cube_Through_Holes.stl  Simple_Circle.stl  Simple_Square.stl  Simple_Triangle.stl  Space_Helmet_Glass.stl  Space_Helmet_Shell.stl  Wrapped_Egg_Inside.stl  Wrapped_Egg_Outside.stl  halfsphere.stl
tests/: test_app_scaling.py  test_gcode_viewer.py  test_nozzle_spacing.py  test_stl_slicer.py  test_tiff_to_gcode.py  test_vector_gcode.py
